--- a/index.html
+++ b/index.html
@@ -25,27 +25,29 @@
             <div class="row clearfix">
 
                 <div class="profile">
-                    <div class="card clearfix">
+                    <div class="card clearfix ">
                         <img src="img/male1.png" alt="male profile 1">
-                        <h2>Mario Bianchi</h2>
-                        <h4>Designer</h4>
-                        <p>mariobianchi@team.it</p>
+                        <div class="profile-information">
+                            <h3>MARIO BIANCHI</h3>
+                            <h4>Designer</h4>
+                            <p class="email">mariobianchi@team.it</p>
+                        </div>
                     </div>
                 </div>
                 <div class="profile">
                     <div class="card clearfix">
                         <img src="img/female1.png" alt="female profile 1">
-                        <h2>Mario Bianchi</h2>
+                        <h3>MARIO BIANCHI</h3>
                         <h4>Designer</h4>
-                        <p>mariobianchi@team.it</p>
+                        <p class="email">mariobianchi@team.it</p>
                     </div>
                 </div>
                 <div class="profile">
                     <div class="card clearfix">
                         <img src="img/male2.png" alt="male profile 2">
-                        <h2>Mario Bianchi</h2>
+                        <h3>MARIO BIANCHI</h3>
                         <h4>Designer</h4>
-                        <p>mariobianchi@team.it</p>
+                        <p class="email">mariobianchi@team.it</p>
                     </div>
                 </div>
                
@@ -55,25 +57,25 @@
                 <div class="profile ">
                     <div class="card clearfix">
                         <img src="img/female2.png" alt="female profile 2">
-                        <h2>Mario Bianchi</h2>
+                        <h3>MARIO BIANCHI</h3>
                         <h4>Designer</h4>
-                        <p>mariobianchi@team.it</p>
+                        <p class="email">mariobianchi@team.it</p>
                     </div>
                 </div>
                 <div class="profile">
                     <div class="card clearfix">
                         <img src="img/male3.png" alt="male profile 3">
-                        <h2>Mario Bianchi</h2>
+                        <h3>MARIO BIANCHI</h3>
                         <h4>Designer</h4>
-                        <p>mariobianchi@team.it</p>
+                        <p class="email">mariobianchi@team.it</p>
                     </div>
                 </div>
                 <div class="profile">
                     <div class="card clearfix">
                         <img src="img/female3.png" alt="female profile 3">
-                        <h2>Mario Bianchi</h2>
+                        <h3>MARIO BIANCHI</h3>
                         <h4>Designer</h4>
-                        <p>mariobianchi@team.it</p>
+                        <p class="email">mariobianchi@team.it</p>
                     </div>
                 </div>
             </div>
