--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- /title -->
 
       <!-- paragraph -->
-      <p>
+      <p class="main-paragraph">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ex
         blanditiis, quis a nisi veniam optio magnam nesciunt. Rem, explicabo.
         Sapiente soluta placeat necessitatibus voluptatum quod possimus
@@ -35,24 +35,24 @@
           <div class="card clearfix">
             <img src="img/male1.png" alt="male profile 1" />
             <h3>MARIO BIANCHI</h3>
-            <h4>Designer</h4>
-            <h4 class="email">mariobianchi@team.it</h4>
+            <p>Designer</p>
+            <p class="email">mariobianchi@team.it</p>
           </div>
         </div>
         <div class="profile">
           <div class="card clearfix">
             <img src="img/female1.png" alt="female profile 1" />
-            <h3>MARIO BIANCHI</h3>
-            <h4>Designer</h4>
-            <h4 class="email">mariobianchi@team.it</h4>
+            <h3>LAURA ROSSI</h3>
+            <p>Front-end developer</p>
+            <p class="email">laurarossi@team.it</p>
           </div>
         </div>
         <div class="profile">
           <div class="card clearfix">
             <img src="img/male2.png" alt="male profile 2" />
-            <h3>MARIO BIANCHI</h3>
-            <h4>Designer</h4>
-            <h4 class="email">mariobianchi@team.it</h4>
+            <h3>GIORGIO VERDI</h3>
+            <p>BACK-END DEVELOPER</p>
+            <p class="email">giorgioverdi@team.it</p>
           </div>
         </div>
       </div>
@@ -63,25 +63,25 @@
         <div class="profile">
           <div class="card clearfix">
             <img src="img/female2.png" alt="female profile 2" />
-            <h3>MARIO BIANCHI</h3>
-            <h4>Designer</h4>
-            <h4 class="email">mariobianchi@team.it</h4>
+            <h3>MARTA IPSUM</h3>
+            <p>SEO specialist</p>
+            <p class="email">martaipsum@team.it</p>
           </div>
         </div>
         <div class="profile">
           <div class="card clearfix">
             <img src="img/male3.png" alt="male profile 3" />
-            <h3>MARIO BIANCHI</h3>
-            <h4>Designer</h4>
-            <h4 class="email">mariobianchi@team.it</h4>
+            <h3>ROBERTO LOREM</h3>
+            <p>Project Manager</p>
+            <p class="email">robertolorem@team.it</p>
           </div>
         </div>
         <div class="profile">
           <div class="card clearfix">
             <img src="img/female3.png" alt="female profile 3" />
-            <h3>MARIO BIANCHI</h3>
-            <h4>Designer</h4>
-            <h4 class="email">mariobianchi@team.it</h4>
+            <h3>DANIELA AMET</h3>
+            <p>Analyst</p>
+            <p class="email">danielaamet@team.it</p>
           </div>
         </div>
       </div>
