refactoring: convert px to rem

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="card clearfix">
             <img src="img/male2.png" alt="male profile 2" />
             <h3>GIORGIO VERDI</h3>
-            <p>BACK-END DEVELOPER</p>
+            <p>Back-end developer</p>
             <p class="email">giorgioverdi@team.it</p>
           </div>
         </div>
