refactoring: changed .profile to .col

--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
       </p>
       <!-- /paragraph -->
 
-      <!-- profile-div -->
+      <!-- col-div -->
 
       <!-- first row -->
       <div class="row clearfix">
-        <div class="profile">
+        <div class="col">
           <div class="card clearfix">
-            <img src="img/male1.png" alt="male profile 1" />
+            <img src="img/male1.png" alt="male col 1" />
             <h3>MARIO BIANCHI</h3>
             <p>Designer</p>
             <p class="email">mariobianchi@team.it</p>
           </div>
         </div>
-        <div class="profile">
+        <div class="col">
           <div class="card clearfix">
-            <img src="img/female1.png" alt="female profile 1" />
+            <img src="img/female1.png" alt="female col 1" />
             <h3>LAURA ROSSI</h3>
             <p>Front-end developer</p>
             <p class="email">laurarossi@team.it</p>
           </div>
         </div>
-        <div class="profile">
+        <div class="col">
           <div class="card clearfix">
-            <img src="img/male2.png" alt="male profile 2" />
+            <img src="img/male2.png" alt="male col 2" />
             <h3>GIORGIO VERDI</h3>
             <p>Back-end developer</p>
             <p class="email">giorgioverdi@team.it</p>
@@ -60,25 +60,25 @@
 
       <!-- second row -->
       <div class="row clearfix">
-        <div class="profile">
+        <div class="col">
           <div class="card clearfix">
-            <img src="img/female2.png" alt="female profile 2" />
+            <img src="img/female2.png" alt="female col 2" />
             <h3>MARTA IPSUM</h3>
             <p>SEO specialist</p>
             <p class="email">martaipsum@team.it</p>
           </div>
         </div>
-        <div class="profile">
+        <div class="col">
           <div class="card clearfix">
-            <img src="img/male3.png" alt="male profile 3" />
+            <img src="img/male3.png" alt="male col 3" />
             <h3>ROBERTO LOREM</h3>
             <p>Project Manager</p>
             <p class="email">robertolorem@team.it</p>
           </div>
         </div>
-        <div class="profile">
+        <div class="col">
           <div class="card clearfix">
-            <img src="img/female3.png" alt="female profile 3" />
+            <img src="img/female3.png" alt="female col 3" />
             <h3>DANIELA AMET</h3>
             <p>Analyst</p>
             <p class="email">danielaamet@team.it</p>
@@ -87,7 +87,7 @@
       </div>
       <!-- /second-row -->
 
-      <!-- /profile-div -->
+      <!-- /col-div -->
     </main>
     <!-- /main -->
   </body>
